feat: adding env file

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
+// nest js secret key
 JWT_SECRET=superSecretKey123
 JWT_EXPIRES_IN=1h
+
+//firebase admin sdk
+FIREBASE_PROJECT_ID=
+FIREBASE_PRIVATE_KEY_ID=
+FIREBASE_PRIVATE_KEY=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_CLIENT_ID=
