--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^6.0.0",
     "cache-manager": "^5.7.0",
     "dotenv": "^16.6.0",
+    "firebase-admin": "^13.5.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
