--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-// nest js secret key
+# NestJS JWT settings
 JWT_SECRET=superSecretKey123
 JWT_EXPIRES_IN=1h
 
-//firebase admin sdk
+# Firebase Admin SDK (all from JSON)
 FIREBASE_PROJECT_ID=
 FIREBASE_PRIVATE_KEY_ID=
 FIREBASE_PRIVATE_KEY=
