--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cache-manager": "^5.7.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.6.0",
     "firebase-admin": "^13.5.0",
     "passport": "^0.7.0",
