--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # NestJS JWT settings
 JWT_SECRET=superSecretKey123
 JWT_EXPIRES_IN=1h
+ALLOWED_CORS=["http://localhost:3000","http://localhost:3001"]
 
 # Firebase Admin SDK (all from JSON)
 FIREBASE_PROJECT_ID=
