--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 JWT_SECRET=superSecretKey123
 JWT_EXPIRES_IN=1h
 ALLOWED_CORS=["http://localhost:3000","http://localhost:3001"]
+PORT=3000
 
 # Firebase Admin SDK (all from JSON)
 FIREBASE_PROJECT_ID=
